pod.yaml
# kubectl apply -f hello.yaml
# kubectl get pods -w
# kubectl delete pod/myapp-pod
#
# No need to create pods anymore / Create Deployments now

apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
spec:
  containers:
  - name: myapp-container
    image: busybox
    command: ['sh', '-c', 'echo Hello Kubernetes! && sleep 10']
