ingress-single.yaml
#   kubectl apply -f ingress-single.yaml


apiVersion: extension/v1beta1
kind: Ingress
metadata:
  name: single-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: www.something.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
