k3s-traefik-ingress.yaml
# Ingress is a Layer-7 load-balancer (traefik, nginx, HAProxy, isteo, etc)
#   kubectl apply -f k3s-traefik-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: ingress.test  # Relies on DNS so add to /etc/hosts for testing in browser (IP will not work)
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
      #kubectl create deploy demo --image=nginx:1.15-alpine
      #kubectl expose deploy/demo --port=80
      - path: /rancher
        backend:
          serviceName: demo
          servicePort: 80
